--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
           "options": {
             "outputPath": "dist/angular-demo",
             "index": "src/index.html",
-            "browser": "src/main.ts",
+            "main": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -23,13 +23,15 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "output": "/"
               }
             ],
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "baseHref": "/watchmovies/"
           },
           "configurations": {
             "production": {
@@ -81,7 +83,8 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "public",
+                "output": "/"
               }
             ],
             "styles": [
@@ -94,6 +97,6 @@
     }
   },
   "cli": {
-    "analytics": "4c005ce0-b799-4613-aebc-dc4eb5b0fece"
+    "analytics": false
   }
 }
