--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
           "options": {
             "outputPath": "dist/angular-demo",
             "index": "src/index.html",
-            "main": "src/main.ts",
+            "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -23,8 +23,7 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public",
-                "output": "/"
+                "input": "public"
               }
             ],
             "styles": [
@@ -83,8 +82,7 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public",
-                "output": "/"
+                "input": "public"
               }
             ],
             "styles": [
@@ -97,6 +95,6 @@
     }
   },
   "cli": {
-    "analytics": false
+    "analytics": "4c005ce0-b799-4613-aebc-dc4eb5b0fece"
   }
 }
